# local-whispr

./: README.md  config.yaml  localwhispr.service  pyproject.toml  visionflow.service
localwhispr/: __init__.py  __main__.py  ai_cleanup.py  config.py  ctl.py  hotkeys.py  meeting.py  meeting_processor.py  notifier.py  recorder.py  screenshot.py  server.py  shortcuts.py  transcriber.py  typer.py
