[project]
name = "localwhispr"
version = "0.2.0"
description = "LocalWhispr - Multimodal voice dictation with AI for Linux (GNOME Wayland). Combines faster-whisper CUDA + Ollama + multimodal screenshot."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "Pillow>=10.0",
    "numpy>=1.26.0",
]

[project.scripts]
localwhispr = "localwhispr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localwhispr"]
